<resources>
    <string name="app_name">E02Veiws</string>
    <string name="action_signUp">회원가입</string>
    <string name="action_memo">메모장</string>
    <string name="action_buttons">버튼</string>
    <string name="action_checkboxes">체크박스</string>
    <string name="action_spinner">Spinners</string>
    <string name="action_alerts">Alerts</string>
    <string name="LoginId">로그인 아이디</string>
    <string name="Input_LoginId">로그인 아이디를 입력하세요.</string>
    <string name="Password">비밀번호</string>
    <string name="Input_Password">비밀번호를 입력하세요.</string>
    <string name="email">이메일</string>
    <string name="Input_email">이메일 주소를 입력하세요.</string>
    <string name="password2">비밀번호 확인</string>
    <string name="Input_Password2">비밀번호를 한 번 더 입력하세요.</string>
    <string name="SignUP">회원가입</string>
    <string name="Input_Title">제목을 입력하세요.</string>
    <string name="Input_Content">내용을 입력하세요.</string>
    <string name="Save">저장</string>
    <string name="refresh">새로고침</string>
    <string name="Auto_Login">자동 로그인</string>
    <string name="Blue">파란색</string>
    <string name="Red">빨간색</string>
    <string name="Yellow">노란색</string>
    <string name="Cat">고양이</string>
    <string name="Dog">강아지</string>
    <string name="Owl">부엉이</string>
    <string name="input_phone">전화번호를 입력하세요.</string>
    <string name="input_address">주소를 입력하세요.</string>
    <string name="saveSuccess">저장 성공</string>
    <string name="close">닫기</string>
    <string name="confirm">확인</string>
    <string name="doYouWantToDelete">삭제하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="selectAnimal">동물 선택</string>
    <string name="cancel">취소</string>
    <string-array name="phoneTypes">
        <item>집전화</item>
        <item>사무실전화</item>
        <item>휴대폰</item>
        <item>기타</item>
    </string-array>
    <string-array name="animals">
        <item>고양이</item>
        <item>강아지</item>
        <item>부엉이</item>
    </string-array>
</resources>